<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">PDA Compass</string>
    <string name="com.crashlytics.android.build_id">8aafeb96-b929-41e3-adc4-860174a5e63f</string>
    <string name="desc_12cal">For shotguns of any type.</string>
    <string name="desc_545ak">For Kalashnikov of any type.</string>
    <string name="desc_556nato">For NATO rifles of any type.</string>
    <string name="desc_762">For sniper rifles of any type.</string>
    <string name="desc_9mm">For pistols or revolvers of any type.</string>
    <string name="desc_9val">Special ammo for VAL or Vintorez silenced rifles.</string>
    <string name="desc_ak">Unlocked: any AK assault gun, only AK ammo can be used with.</string>
    <string name="desc_altered_insulator">Emits 7 Sv of radiation permanently, when in inventory.</string>
    <string name="desc_anabiotic">Eleminates emission effect, drops 30% of health</string>
    <string name="desc_antirad">Removes 7 Sv of obtained radiation, drops 20% of health</string>
    <string name="desc_army_medkit">Instant health restore 20%</string>
    <string name="desc_atom">For gauss rifles of any type. Can be radioactive.</string>
    <string name="desc_b190">Eliminates radiation effect for 1 minute</string>
    <string name="desc_bag">Quest: 5 expirience points.</string>
    <string name="desc_bandage">Instant health restore 10%</string>
    <string name="desc_bandit_suit" formatted="false">Fractional: Worn off after 3 hours of any damage. Radiation obtains 30% slower, anomaly effect 20% less, mental effect 10% less</string>
    <string name="desc_berill_suit" formatted="false">Fractional: Worn off after 3 hours of any damage. Health restores 200% faster in clear locations, when less than 1 Sv of radiation is obtained. Radiation obtain, anomaly and mental 20% less</string>
    <string name="desc_bigbk">Many things inside. Can be very useful.</string>
    <string name="desc_binocl">Unlocked: binoculars of any type.</string>
    <string name="desc_black_energy">Emits 14 Sv of radiation permanently, when in inventory.</string>
    <string name="desc_bread">1 expirience point.</string>
    <string name="desc_bubble">Radiation obtains 20% slower. Gives 5 points of expirience.</string>
    <string name="desc_calibrating_10">Mastercode: All threats -10% less. Using 1 artefact slot.</string>
    <string name="desc_calibrating_25">Mastercode: All threats -25% less. Using 1 artefact slot.</string>
    <string name="desc_calibrating_50">Mastercode: All threats -50% less. Using 1 artefact slot.</string>
    <string name="desc_calibrating_75">Mastercode: All threats -75% less. Using 1 artefact slot.</string>
    <string name="desc_canned_meat">3 expirience points.</string>
    <string name="desc_clearsky_suit" formatted="false">Fractional: Worn off after 3 hours of any damage. Radiation obtains 30% slower, anomaly effect 20% less, mental effect 10% less</string>
    <string name="desc_collimator">Unlocked: any collimator for any weapon.</string>
    <string name="desc_compass" formatted="false">"Anomalies is detectable, but can't hurt, Mental effect 60% less, but radiation obtains 100% faster. Gives 30 points of expirience."</string>
    <string name="desc_crystal">Radiation obtains 40% slower. Gives 10 points of expirience.</string>
    <string name="desc_dead_rat">No meaning, no expirience. Just dead rat.</string>
    <string name="desc_delikates">6 expirience points.</string>
    <string name="desc_doktorskaja">5 expirience points.</string>
    <string name="desc_droplets">Radiation obtains 10% slower. Gives 2 points of expirience.</string>
    <string name="desc_duty_suit" formatted="false">Fractional: Worn off after 3 hours of any damage. Radiation obtains 30% slower, anomaly effect 20% less, mental effect 10% less</string>
    <string name="desc_energy_drink">Health restores 100% faster in clear locations, if less than 1 Sv is obtained. Lasts for 30 minutes</string>
    <string name="desc_exoskeleton" formatted="false">Health restores 100% faster in clear locations, when less than 1 Sv of radiation is obtained, radiation obtains 30% slower, anomaly effect 40% less, mental effect 20% less for 2 hours of any damage</string>
    <string name="desc_eye">Health restores 100% faster in clear locations, when less than 1 Sv of radiation is obtained. Gives 2 points of expirience.</string>
    <string name="desc_f1">Good against other stalkers.</string>
    <string name="desc_fireball">Radiation obtains 30% slower. Gives 10 points of expirience.</string>
    <string name="desc_freedom_suit" formatted="false">Fractional: Worn off after 3 hours of any damage. Radiation obtains 30% slower, anomaly effect 20% less, mental effect 10% less</string>
    <string name="desc_garmoshka">Quest: 4 expirience points.</string>
    <string name="desc_gasmask">Radiation obtains 60% slower for 1 hour.</string>
    <string name="desc_gasoline">Quest: 10 expirience points.</string>
    <string name="desc_gauss_gun">Unlocked: any gauss gun, only gauss ammo can be used with.</string>
    <string name="desc_goldfish" formatted="false">Health restores 300% faster in clear locations, when less than 1 Sv of radiation is obtained. Resist to Controller psionic attack 90%. Gives 15 points of expirience.</string>
    <string name="desc_green_svoboda">Radiation obtains 90% slower for 2 hours</string>
    <string name="desc_grenade_launcher">Unlocked: any fittable or not grenade launcher.</string>
    <string name="desc_guitar">Quest: 20 expirience points.</string>
    <string name="desc_hercules">Health restores 50% faster in clear locations, if less than 1 Sv is obtained. Lasts for 30 minutes</string>
    <string name="desc_incend">Good for burn some enemies.</string>
    <string name="desc_instruments">Quest: 30 expirience points.</string>
    <string name="desc_ip2">Eliminates anomaly effect for 1 minute</string>
    <string name="desc_jellyfish">Health restores 50% faster in clear locations, when obtained les than 1 Sv of radiation. Gives 1 point of expirience.</string>
    <string name="desc_knife">Unlocked: any knife.</string>
    <string name="desc_kolobok">Health restores 200% faster in clear locations, when less than 1 Sv of radiation is obtained. Gives 5 points of expirience.</string>
    <string name="desc_leather_jacket">Radiation obtains 10% slower for 1 hour of any damage</string>
    <string name="desc_limonka">Good in any unclear situations.</string>
    <string name="desc_m4">Unlocked: any NATO assault gun, only NATO ammo can be used with.</string>
    <string name="desc_machinegun">Unlocked: any machinegun, only assault ammo can be used with. NOT APPLICABLE FOR LONERS.</string>
    <string name="desc_mamas_beads" formatted="false">Health restores 400% faster in clear locations, when less than 1 Sv of radiation is obtained. Resist to Burer telekinetic attack 90%. Gives 15 points of expirience.</string>
    <string name="desc_maps">Quest: 15 expirience points.</string>
    <string name="desc_medkit">Instant health restore 20%</string>
    <string name="desc_merc_suit" formatted="false">Fractional: Worn off after 3 hours of any damage. Radiation obtains 30% slower, anomaly effect 20% less, mental effect 10% less</string>
    <string name="desc_mica" formatted="false">Health restores 500% faster in clear locations, when less than 1 Sv of radiation is obtained. Resist to Burer and Controller distant attacks 90%. but radiation, anomaly and mental 25% strongest. Gives 20 points of expirience.</string>
    <string name="desc_monolith_suit" formatted="false">Fractional: Worn off after 3 hours of any damage. Radiation obtains 30% slower, anomaly effect 20% less, resist to mental 99%</string>
    <string name="desc_moonlight" formatted="false">Resist to anomaly effect 50%, but radiation obtains 20% faster. Gives 10 points of expirience.</string>
    <string name="desc_night_star" formatted="false">Mental effect 60% less, but radiation obtains 60% faster. Gives 15 points of expirience.</string>
    <string name="desc_night_vision">Unlocked: any night vision device or optics for any weapon.</string>
    <string name="desc_optics">Unlocked: any optics for any weapon.</string>
    <string name="desc_pda">Quest: 50 expirience points.</string>
    <string name="desc_pellicle" formatted="false">Mental effect 40% less, but radiation obtains 40% faster. Gives 10 points of expirience.</string>
    <string name="desc_pistol">Unlocked: any pistol, only pistol ammo can be used with.</string>
    <string name="desc_podgren">One shot for your grenade launcher.</string>
    <string name="desc_psionic_device">Quest: 50 expirience points.</string>
    <string name="desc_psyblock">Eliminates mental effect for 1 minute</string>
    <string name="desc_red_devil">4 expirience points.</string>
    <string name="desc_respirator">Radiation obtains 40% slower for 30 minutes.</string>
    <string name="desc_sausage">2 expirience points.</string>
    <string name="desc_scientific_medkit">Instant health restore 50%, removes 3 Sv of obtained radiation</string>
    <string name="desc_seva_suit" formatted="false">Radiation obtains 50% slower, anomaly effect 40% less, mental effect 30% less for 2 hours of any damage</string>
    <string name="desc_shell">Emits 1 Sv of radiation permanently, when in inventory.</string>
    <string name="desc_shlem1" formatted="false">Mental strength 99% lower, Controller is 30% weaker for 30 minutes.</string>
    <string name="tray_compass">Compass off/on</string>
    <string name="tray_landscape">Landscape</string>
    <string name="tray_orientation">Orientation</string>
    <string name="tray_portrait">Portrait</string>
    <string name="tray_vibro">Vibro off/on</string>
</resources>